Showing linked scene in 2.8, crashes on load #53481

Closed
opened 2017-12-06 07:02:14 +01:00 by Campbell Barton · 9 comments

There is a bug in 2.8x where saving with an active linked scene crashes on reload.
There isn't much to redo this error

In the attached file:

  • Open link_dst.blend
  • Switch the scene to Scene Link
  • Save, Load (crash)

7ca8af4cc82010c85fa6d7f663977117eb23b6f9
test.tar.bz2

See P567 for the crash log, although Im not sure this points to the root cause.

From looking into this it seems readfile.c expects the view_layer pointer in the workspace to exist in the scene - which isn't the case when the scene is linked.

There is a bug in 2.8x where saving with an active linked scene crashes on reload. There isn't much to redo this error In the attached file: - Open `link_dst.blend` - Switch the scene to `Scene Link` - Save, Load (crash) `7ca8af4cc82010c85fa6d7f663977117eb23b6f9` [test.tar.bz2](https://archive.blender.org/developer/F1314987/test.tar.bz2) See [P567](https://archive.blender.org/developer/P567.txt) for the crash log, although Im not sure this points to the root cause. From looking into this it seems readfile.c expects the view_layer pointer in the workspace to exist in the scene - which isn't the case when the scene is linked.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Julian Eisel was assigned by Dalai Felinto 2017-12-06 13:00:09 +01:00
JeoJohn commented 2017-12-07 09:10:47 +01:00 (Migrated from localhost:3001)

Added subscriber: @JeoJohn

Added subscriber: @JeoJohn
JeoJohn commented 2017-12-07 09:10:47 +01:00 (Migrated from localhost:3001)

This comment was removed by @JeoJohn

*This comment was removed by @JeoJohn*
Member

This raises the question on how view-layers should be handled when linking scenes. Should we link view-layers with them? If so how can we do this (since view-layers aren't IDs)?
I don't recall if we ever discussed this.

EDIT - NVM, read next comment.

This raises the question on how view-layers should be handled when linking scenes. Should we link view-layers with them? If so how can we do this (since view-layers aren't IDs)? I don't recall if we ever discussed this. EDIT - NVM, read next comment.
Member

Bah... I'm a moron :| View-layers belong to the scene data-block, so we can read them just fine when linking. NVM then, this is not an issue...

Note that this is a symptom of #54140.

Bah... I'm a moron :| View-layers belong to the scene data-block, so we can read them just fine when linking. NVM then, this is not an issue... Note that this is a symptom of #54140.
Julian Eisel was unassigned by Campbell Barton 2018-05-22 12:34:11 +02:00
Campbell Barton self-assigned this 2018-05-22 12:34:11 +02:00
Author
Owner

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

This issue was referenced by d59b74adb3

This issue was referenced by d59b74adb38f3ac6b85107aa506e471efbd2a20c
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53481
No description provided.