Fix T53481: Linked scene crashes on load