source/blender/blenloader/intern/writefile.c
@@ -3596,6 +3596,14 @@ static void write_workspace(WriteData *wd, WorkSpace *workspace)
 {
 	ListBase *layouts = BKE_workspace_layouts_get(workspace);
 
+	/* Update the names for file (only need to set on write). */
+	for (WorkSpaceDataRelation *relation = workspace->scene_viewlayer_relations.first;
+	     relation;
+	     relation = relation->next)
+	{
+		STRNCPY(relation->value_idname, ((ViewLayer *)relation->value)->name);
+	}
+
 	writestruct(wd, ID_WS, WorkSpace, 1, workspace);
 	writelist(wd, DATA, WorkSpaceLayout, layouts);
 	writelist(wd, DATA, WorkSpaceDataRelation, &workspace->hook_layout_relations);
